--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
                         </form>
                     </div>
                 </div>
-                
+                </div>
             <div class="card-body">
                 <!-- Search Bar -->
                 <div class="mb-3">
