--- a/Views/Order/Index.cshtml
+++ b/Views/Order/Index.cshtml
@@ -31,7 +31,7 @@
                             Price
                         </th>
                         <th>
-                            Created at:
+                            Created At
                         </th>
                         <th>
                             Status
