--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -9,7 +9,7 @@
 
 <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h1>Product Cards</h1>
+        <h1>Products</h1>
         <a asp-action="Create" class="btn btn-primary">
             <i class="fas fa-plus"></i> Add New Product
         </a>
@@ -19,7 +19,7 @@
             <form asp-action="Index">
                 <div class="row">
                     <div class="col-md-6">
-                        <input name="name" type="text" value="@name" placeholder="Product Name" class="form-control" style="min-height: 40px;" />
+                        <input name="name" type="text" value="@name" placeholder="Product Name" class="form-control mt-2" style="min-height: 40px;" />
                     </div>
                     <div class="col-md-6">
                         <button type="submit" class="btn btn-secondary">
