--- a/Views/Order/ViewReceipt.cshtml
+++ b/Views/Order/ViewReceipt.cshtml
@@ -7,27 +7,34 @@
     <div class="card col-md-6">
         <div class="card-header">
             <div class="row">
-                <h2 class="mt-2">Receipt</h2>
-                <a class="btn btn-primary ml-4" style="min-height:30px;" asp-action="Index">
-                    Return
-                </a>
+                <div class="col-md-12">
+                    <h2 class="mt-2">@Model.Select(op => op.Order?.OrderNumber).FirstOrDefault()</h2>
+                </div>
             </div>
         </div>
         <div class="card-body">
+            <div class="row mb-3">
+                <div class="col-md-6">
+                    <h4>Product</h4>
+                </div>
+                <div class="col-md-3 text-end">
+                    <h4>Quantity</h4>
+                </div>
+                <div class="col-md-3 text-end">
+                    <h4>Price</h4>
+                </div>
+            </div>
             @foreach (var orderProduct in Model)
             {
                 <div class="row mb-3">
                     <div class="col-md-6">
-                        <h4>Product:</h4>
-                        <p>@orderProduct.Product.Name</p>
+                        <p>@orderProduct?.Product?.Name</p>
                     </div>
                     <div class="col-md-3 text-end">
-                        <h4>Quantity</h4>
-                        <p>@orderProduct.Quantity</p>
+                        <p>@orderProduct?.Quantity</p>
                     </div>
                     <div class="col-md-3 text-end">
-                        <h4>Price</h4>
-                        <p>$@(orderProduct.Quantity* orderProduct.Product.Price)</p>
+                        <p>$@(orderProduct?.Quantity * orderProduct?.Product?.Price)</p>
                     </div>
                 </div>
             }
@@ -37,7 +44,18 @@
                     <h4>Total Price:</h4>
                 </div>
                 <div class="col-md-3 text-end">
-                    <h4>@Model.Sum(op => op.Quantity * op.Product.Price).ToString("C")</h4>
+                    <h4>
+                        <b>
+                            @Model.Sum(op => op.Quantity * op.Product.Price).ToString("C")
+                        </b>
+                    </h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <a class="btn btn-primary" asp-action="Index">
+                        <i class="fas fa-arrow-left"></i> Return
+                    </a>
                 </div>
             </div>
         </div>
